ui: fixed overflow of location

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
+@layer components{
+    .header-icon{
+        @apply text-white w-7 h-7
+    }
+}
 @tailwind components;
+
 @tailwind utilities;
